{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 29,
  "lineage": "c328ef89-025d-4c60-2554-43e7dfbc9e2b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:414399442808:internet-gateway/igw-044545bde584730ac",
            "id": "igw-044545bde584730ac",
            "owner_id": "414399442808",
            "tags": {
              "Name": "k8s_vpc_igw"
            },
            "tags_all": {
              "Name": "k8s_vpc_igw"
            },
            "vpc_id": "vpc-07277e876f4957e0b"
          },
          "dependencies": [
            "aws_vpc.VPC_K8s"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "K8s_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:414399442808:route-table/rtb-08eef4c362fa101f2",
            "id": "rtb-08eef4c362fa101f2",
            "owner_id": "414399442808",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-044545bde584730ac",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Main_k8s_RT"
            },
            "tags_all": {
              "Name": "Main_k8s_RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-07277e876f4957e0b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.VPC_K8s"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks-cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:414399442808:security-group/sg-0e4823bd3818b4606",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e4823bd3818b4606",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "SG-eks-cluster",
            "name_prefix": "",
            "owner_id": "414399442808",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07277e876f4957e0b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC_K8s"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:414399442808:subnet/subnet-035676c6e99fdc01f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-035676c6e99fdc01f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "414399442808",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Pub_sub_k8s"
            },
            "tags_all": {
              "Name": "Pub_sub_k8s"
            },
            "vpc_id": "vpc-07277e876f4957e0b"
          },
          "dependencies": [
            "aws_vpc.VPC_K8s"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub_pvt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:414399442808:subnet/subnet-03cb1a2bb8223e4eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03cb1a2bb8223e4eb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "414399442808",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Pvt_sub_k8s"
            },
            "tags_all": {
              "Name": "Pvt_sub_k8s"
            },
            "vpc_id": "vpc-07277e876f4957e0b"
          },
          "dependencies": [
            "aws_vpc.VPC_K8s"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC_K8s",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:414399442808:vpc/vpc-07277e876f4957e0b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0253e614e806ce89b",
            "default_route_table_id": "rtb-00276c20af0c17571",
            "default_security_group_id": "sg-044e579c466eb3e6d",
            "dhcp_options_id": "dopt-29e6e24d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-07277e876f4957e0b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00276c20af0c17571",
            "owner_id": "414399442808",
            "tags": {
              "Name": "VPC_k8s"
            },
            "tags_all": {
              "Name": "VPC_k8s"
            }
          }
        }
      ]
    }
  ]
}